# mzb-suite

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .readthedocs.yaml  .renkulfsignore  AUTHORS  CHANGELOG  CITATION.cff  Dockerfile  LICENCE  README.md  class_counts_classification.csv  env-forge.yml  environment.yml  environment_GPU.yml  environment_full.yml  environment_mac.yml  mzbsuite_env.txt  pyproject.toml  setup.py  streamlit_homepage.py
.renku/: template_checksums.json
.streamlit/: pages_sections.toml
configs/: configuration_flume_datasets.yaml  global_configuration.yaml  global_configuration.yml  mzb_example_config.yaml
data/: MZB_taxonomy.R  MZB_taxonomy.csv  README.md
docs/: env_RtD.txt  env_old.txt
mzb_workflow/: utils.py
mzbsuite/: __init__.py  utils.py
notebooks/: classification_finetune.ipynb  example_workflow.ipynb  read_example.ipynb  segmentation.ipynb  skeletonization_supervised_inference.ipynb  skeletonization_unsupervised.ipynb  testnotebook.ipynb
pages/: app_main_raw_to_clips.py
scripts/: summarisation.py  swiss-invertebrate_summ_plots.py
streamlit_pages/: app_homepage.py  app_main_raw_to_clips.py  app_main_supervised_skeleton_assessment.py  app_main_supervised_skeleton_inference.py  app_main_unsupervised_skeleton_estimation.py
workflows/: full_pipeline_custom.sh  my-workflow.yaml  mzb_example_full_pipeline.bat  mzb_example_full_pipeline.sh  mzb_preprocess_anns.bat  mzb_streamlit_gui.bat  renku_workflow.yaml  run_finetune_classification.sh  run_finetune_skeletonization.sh  run_pipeline.sh  (+2 more)
(+93 files in other folders)
